# cbfs-toolkit

./: .gitignore  LICENSE  README.md
TheVaultProject/cbfs-toolkit/: Cargo.toml  README.md
TheVaultProject/cbfs-toolkit/scripts/: build-release.bat  build-release.ps1
TheVaultProject/cbfs-toolkit/src/: config.rs  credential_store.rs  errors.rs  file_ops.rs  fuse_common.rs  fuse_gdrive.rs  interactive.rs  main.rs  mount_manager.rs  sqlite_vault.rs  utils.rs  vault_manager.rs
TheVaultProject/cbfs-toolkit/src/domain/: user.rs  vault.rs
TheVaultProject/cbfs-toolkit/src/infrastructure/: argon_auth_service.rs  cbfs_vault_service.rs  mod.rs  permission_service.rs  sqlite_user_repo.rs
cbfsconnect/: Cargo.toml
cbfsconnect/src/: cbcache.rs  cbfs.rs  cbfsconnectkey.rs  fuse.rs  lib.rs  nfs.rs
cbfsvault/: Cargo.toml
cbfsvault/src/: cbfsvaultkey.rs  cbvault.rs  cbvaultdrive.rs  lib.rs  update_drive.ps1  update_static.py
lib64/linux/: librustcbfsvault.so.24.0
