
[package]
name = "cbfsvault"
version = "24.0.0"
edition = "2021" # Rust edition

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7"
chrono = "0.4"
once_cell = "1.19"
ctor ="0.2.6"

[lib]
# crate-type = ["lib"]
name = "cbfsvault"
# path = "src/lib.rs"

