
[package]
name = "cbfs-toolkit"
version = "24.0.0"
edition = "2021"
description = "A comprehensive Rust toolkit for CBFS Vault and Connect SDK integration with cloud storage, RBAC, and secure credential management"
authors = ["Ahmed"]
license = "MIT"
repository = "https://github.com/ahmedalakhali/cbfs-toolkit"
keywords = ["cbfs", "vault", "fuse", "google-drive", "encryption"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
cbfsvault = { path = "../../cbfsvault" }
cbfsconnect = { path = "../../cbfsconnect" }
chrono = "0.4"
once_cell = "1.19"
sysinfo = "0.30"
rand = "0.8"
filetime = "0.2.25"
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
google-drive3 = "5.0"
yup-oauth2 = "9.0"
tokio = { version = "1.0", features = ["full"] }
hyper = "0.14"
hyper-rustls = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
argon2 = "0.5"
keyring = "2"
anyhow = "1.0"

[[bin]]
name = "cbfs-toolkit"
path = "src/main.rs"
